# ChuyenDoi_AIP_HoSo_TT05

./: MA_PHONG_GUIDE.md  README.md  TECHNICAL_DOCS.md  ThietKeHeThong.md  aip_hoso_mets_rtm_v_1_0_tt_05_2025_tt_bnv.md  analyze_data_completeness.py  analyze_requirements.py  check_data_completeness.py  completeness_analysis_enhanced.py  data_completeness_report.txt  pyproject.toml  requirements.txt
aip_builder/: __init__.py  __main__.py  batch_processor.py  config.py  error_handling.py  excel_reader.py  grouping.py  models.py  package_builder.py  pdf_probe.py  validator.py  xml_generator.py
aip_builder/schemas/: EAD_doc.xsd  EAD_media.xsd  EAD_pic.xsd  ead.xsd  mets.xsd  premis.xsd
aip_builder/templates/: ead_document.xml  ead_template.xml  mets_template.xml  mets_template_new.xml  premis_rep_template.xml  premis_template.xml  rep_mets.xml  simpledc_hoso_template.xml  simpledc_tailieu_template.xml
aip_builder/utils/: pathlib_win.py
data/Input/: metadata.xlsx
temp_xml/: ead.xml  mets.xml  premis.xml
