[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aip-builder"
version = "1.0.0"
description = "Chương trình chuyển đổi metadata.xlsx + PDF thành gói AIP_hoso theo Thông tư 05/2025/TT-BNV"
authors = [
    {name = "AIP Builder Team", email = "contact@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "jinja2>=3.1.0",
    "PyPDF2>=3.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
aip-builder = "aip_builder.__main__:main"

[project.urls]
Homepage = "https://github.com/example/aip-builder"
Repository = "https://github.com/example/aip-builder.git"
Documentation = "https://github.com/example/aip-builder#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["aip_builder*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=aip_builder --cov-report=html --cov-report=term-missing"
